   [773229].
 - Don't try random DCC ports when a range is set (mib) [889987].
 - Fix: Spurious nick completion (mib) [916944].
 - Serverlist passwd box is now masked (Cristian Peraferrer) [920113].
 - Fix: Sometimes messes up the tab order on reconnect (Gabor Szeder)
   [941773].
 - Fix: Crashes when setting CHARSET to non-existant charset [945855].
 - 
 - 


----------------------------------------------------------------------
 2.0.8
----------------------------------------------------------------------

 - Updated translations (az, es, fi, lt, mk, nl, ru, sk, sl, sr, sv,
   zh_CN).
 - Added color, flash and iconify args to /GUI command (this is for
   use in scripts and plugins only).
 - Plugin API: Added "notify" list.
 - Plugin API: Added id, users, flags fields for "channels" list.
 - Win32: Better error messages for file i/o and winsock errors.
 - New Perl interface (with backward compatibility)! (Lian Situ).
 - Fixed command-character buglet [873541].
 - Win32: Improved incorrect CPS display for file transfers.
 - Added "Copy Selected URL" option to URL popupmenu (Mike Battersby).
 - Added work-around for "Get my IP from server" not working on PTNet
   (Mario Freitas).
 - Fixed: Alt+numbers do not work with X Input Method [896968] (Marius
   Gedminas).
 - Added support for "+port" to indicate SSL connections.
 - Fixed non-ASCII chars in time-stamp bug [918445].
 - Smaller bug fixes: [870073] [890891].


----------------------------------------------------------------------
 2.0.7
----------------------------------------------------------------------

 - Updated translations (fi, nl).
 - Fixed dcc psend crash [858539].
 - Fixed bug where an error message was erroneously displayed while
   transfering files with fast-send turned off. Also, allow fastsend
   to be used with psend (Daniel Dubois).
 - Print more informative messages when Perl scripts fail to load
   (Andy).
 - Win32: Added native sound playing support.