@@ -26,5 +26,6 @@ EXPORTED {
 		xchat_plugingui_remove;
 		xchat_emit_print;
 		xchat_list_time;
+		xchat_gettext;
 	local: *;
 };
