@@ -15,6 +15,7 @@
  - Fix: Sometimes messes up the tab order on reconnect (Gabor Szeder)
    [941773].
  - Fix: Crashes when setting CHARSET to non-existant charset [945855].
+ - Added some fields to the "channels" list for the plugin API.
  - 
  - 
 
